# ZecKit

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  FAILURE_DRILLS.md  LICENSE-MIT  MILESTONE_4_TODO.md  MILESTONE_5_TODO.md  README.md  USAGE.md  action.yml  docker-compose.yml  pdf_content.txt  startup_guide.md  zeckit_demo.md
.github/: dependabot.yml
.github/workflows/: build-images.yml  ci-action-test.yml  ci.yml  e2e-test.yml  release.yml  smoke-test.yml  zeckit-e2e.yml
cli/: .dockerignore  .gitignore  Cargo.toml  Readme.md
cli/assets/: docker-compose.yml
cli/assets/configs/: zebra-sync.toml  zebra.toml
cli/fixtures/: test-address.json  unified-addresses.json
cli/src/: assets.rs  error.rs  main.rs  utils.rs
cli/src/commands/: down.rs  init.rs  mod.rs  snapshot.rs  status.rs  test.rs  up.rs
cli/src/config/: settings.rs
cli/src/docker/: compose.rs  health.rs  mod.rs
docker/configs/: zebra-sync.toml  zebra.toml
docker/lightwalletd/: Dockerfile  entrypoint.sh
docker/zaino/: Dockerfile  entrypoint.sh
docker/zebra/: Dockerfile  entrypoint.sh
docker/zingo/: Dockerfile  entrypoint.sh
fixtures/: test-address.json
specs/: acceptance-tests.md  architecture.md  technical-spec.md
zeckit-faucet/: .gitignore  Cargo.toml  Dockerfile
zeckit-faucet/fixtures/: unified-addresses.json
zeckit-faucet/src/: main.rs
zeckit-faucet/src/api/: faucet.rs  health.rs  mod.rs  stats.rs  wallet.rs
zeckit-faucet/src/tests/: test_vectors.rs
zeckit-faucet/src/validation/: mod.rs  zebra_rpc.rs
zeckit-faucet/src/wallet/: manager.rs  mod.rs  seed.rs
