[package]
name = "zeckit"
version = "0.1.1"
edition = "2021"
authors = ["Dapps over Apps"]
description = "ZecKit CLI - Developer toolkit for Zcash on Zebra"
license = "MIT OR Apache-2.0"
repository = "https://github.com/intellidean/ZecKit"
homepage = "https://github.com/intellidean/ZecKit"
readme = "Readme.md"
keywords = ["zcash", "zebra", "regtest", "faucet", "devnet"]
categories = ["development-tools", "cryptography::cryptocurrencies"]

[[bin]]
name = "zeckit"
path = "src/main.rs"

[dependencies]
regex = "1.10"
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Standalone embedded assets
rust-embed = { version = "8.0", features = ["include-exclude"] }
dirs = "5.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal output
colored = "2.1"
indicatif = "0.17"

# Process execution
subprocess = "0.2"

[dev-dependencies]
tempfile = "3.8"