[package]
name = "zeckit-faucet"
version = "1.0.7"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Zebra RPC
reqwest = { version = "0.12", features = ["json"] }

# Zingolib - Official v3.0.0 for NU6 support
zingolib = { git = "https://github.com/zingolabs/zingolib", tag = "zingolib_v3.0.0", features = ["regtest"] }

# Zcash address handling
zcash_address = "0.10"
zcash_primitives = "0.26"
zcash_client_backend = { version = "0.21.0", features = ["lightwalletd-tonic", "orchard"] }
zcash_keys = "0.12.0"
zcash_protocol = "0.7.2"
zingo-memo = "0.1.0"
zebra-chain = "5.0.0"
tonic = "0.12"
bip0039 = "0.13"
zip32 = "0.2.1"
http = "1.0"
rand_core = "0.6"
subtle = "2.4"

[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"

